WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146642
[Mac] Inactive AirPlay route should automatically timeout
https://bugs.webkit.org/show_bug.cgi?id=146642
Summary
[Mac] Inactive AirPlay route should automatically timeout
Eric Carlson
Reported
2015-07-06 09:32:27 PDT
Invalidate an AirPlay route when a media element has been paused for long enough.
Attachments
Proposed patch.
(12.63 KB, patch)
2015-07-06 10:19 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Updated patch.
(12.63 KB, patch)
2015-07-06 10:55 PDT
,
Eric Carlson
bfulgham
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2015-07-06 09:41:06 PDT
<
rdar://problem/21602955
>
Eric Carlson
Comment 2
2015-07-06 10:19:08 PDT
Created
attachment 256218
[details]
Proposed patch.
WebKit Commit Bot
Comment 3
2015-07-06 10:22:04 PDT
Attachment 256218
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/mediasession/WebMediaSessionManager.cpp:179: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 4
2015-07-06 10:55:19 PDT
Created
attachment 256220
[details]
Updated patch.
Brent Fulgham
Comment 5
2015-07-06 10:59:32 PDT
Comment on
attachment 256220
[details]
Updated patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=256220&action=review
r=me. Please correct that indentation issue.
> Source/WebCore/Modules/mediasession/WebMediaSessionManager.cpp:181 > +}
Whoops! This brace needs to be indented to match the "if" statement.
Eric Carlson
Comment 6
2015-07-06 11:06:23 PDT
Committed
r186361
:
https://trac.webkit.org/r186361
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug