Source/WebCore/Modules/mediasession/WebMediaSessionManager.cpp
@@ -55,6 +55,7 @@ struct ClientState {
     WebCore::MediaProducer::MediaStateFlags flags { WebCore::MediaProducer::IsNotPlaying };
     bool requestedPicker { false };
     bool configurationRequired { true };
+    bool playedToEnd { false };
 };
 
 static bool flagsAreSet(MediaProducer::MediaStateFlags value, unsigned flags)
@@ -87,6 +88,7 @@ static String mediaProducerStateString(MediaProducer::MediaStateFlags flags)
 
 WebMediaSessionManager::WebMediaSessionManager()
     : m_taskTimer(RunLoop::current(), this, &WebMediaSessionManager::taskTimerFired)
+    , m_watchdogTimer(RunLoop::current(), this, &WebMediaSessionManager::watchdogTimerFired)
 {
 }
 
@@ -170,6 +172,13 @@ void WebMediaSessionManager::clientStateDidChange(WebMediaSessionManagerClient& 
     changedClientState->flags = newFlags;
     if (!flagsAreSet(oldFlags, MediaProducer::RequiresPlaybackTargetMonitoring) && flagsAreSet(newFlags, MediaProducer::RequiresPlaybackTargetMonitoring))
         scheduleDelayedTask(TargetMonitoringConfigurationTask);
+
+    MediaProducer::MediaStateFlags playingToTargetFlags = MediaProducer::IsPlayingToExternalDevice | MediaProducer::IsPlayingVideo;
+    if ((oldFlags & playingToTargetFlags) != (newFlags & playingToTargetFlags)) {
+        if (flagsAreSet(oldFlags, MediaProducer::IsPlayingVideo) && !flagsAreSet(newFlags, MediaProducer::IsPlayingVideo) && flagsAreSet(newFlags, MediaProducer::DidPlayToEnd))
+            changedClientState->playedToEnd = true;
+        scheduleDelayedTask(WatchdogTimerConfigurationTask);
+    }
 
     if (!m_playbackTarget || !m_playbackTarget->hasActiveRoute())
         return;
@@ -276,6 +285,8 @@ void WebMediaSessionManager::configurePlaybackTargetClients()
         if (!flagsAreSet(state->flags, MediaProducer::IsPlayingToExternalDevice))
             state->client.setShouldPlayToPlaybackTarget(state->contextId, true);
     }
+
+    configureWatchdogTimer();
 }
 
 void WebMediaSessionManager::configurePlaybackTargetMonitoring()
@@ -306,6 +317,8 @@ String WebMediaSessionManager::toString(ConfigurationTasks tasks)
         string.append("TargetClientsConfigurationTask + ");
     if (tasks & TargetMonitoringConfigurationTask)
         string.append("TargetMonitoringConfigurationTask + ");
+    if (tasks & WatchdogTimerConfigurationTask)
+        string.append("WatchdogTimerConfigurationTask + ");
     if (string.isEmpty())
         string.append("NoTask");
     else
@@ -333,6 +346,8 @@ void WebMediaSessionManager::taskTimerFired()
         configurePlaybackTargetClients();
     if (m_taskFlags & TargetMonitoringConfigurationTask)
         configurePlaybackTargetMonitoring();
+    if (m_taskFlags & WatchdogTimerConfigurationTask)
+        configureWatchdogTimer();
 
     m_taskFlags = NoTask;
 }
@@ -345,6 +360,49 @@ size_t WebMediaSessionManager::find(WebMediaSessionManagerClient* client, uint64
     }
 
     return notFound;
+}
+
+void WebMediaSessionManager::configureWatchdogTimer()
+{
+    static const double watchdogTimerIntervalAfterPausing = 60 * 60;
+    static const double watchdogTimerIntervalAfterPlayingToEnd = 8 * 60;
+
+    if (!m_playbackTarget || !m_playbackTarget->hasActiveRoute()) {
+        m_watchdogTimer.stop();
+        return;
+    }
+
+    bool stopTimer = false;
+    bool didPlayToEnd = false;
+    for (auto& state : m_clientState) {
+        if (flagsAreSet(state->flags, MediaProducer::IsPlayingToExternalDevice) && flagsAreSet(state->flags, MediaProducer::IsPlayingVideo))
+            stopTimer = true;
+        if (state->playedToEnd)
+            didPlayToEnd = true;
+        state->playedToEnd = false;
+    }
+
+    if (stopTimer) {
+        m_currentWatchdogInterval = 0;
+        m_watchdogTimer.stop();
+        LOG(Media, "WebMediaSessionManager::configureWatchdogTimer - timer stopped");
+    } else {
+        double interval = didPlayToEnd ? watchdogTimerIntervalAfterPlayingToEnd : watchdogTimerIntervalAfterPausing;
+        if (interval != m_currentWatchdogInterval || !m_watchdogTimer.isActive()) {
+            m_watchdogTimer.startOneShot(interval);
+            LOG(Media, "WebMediaSessionManager::configureWatchdogTimer - timer scheduled for %.0f", interval);
+        }
+        m_currentWatchdogInterval = interval;
+    }
+}
+
+void WebMediaSessionManager::watchdogTimerFired()
+{
+    LOG(Media, "WebMediaSessionManager::watchdogTimerFired");
+    if (!m_playbackTarget)
+        return;
+
+    targetPicker().stopMonitoringPlaybackTargets();
 }
 
 } // namespace WebCore
