Source/WebCore/page/MediaProducer.h
@@ -37,6 +37,7 @@ public:
         IsPlayingToExternalDevice = 1 << 2,
         RequiresPlaybackTargetMonitoring = 1 << 3,
         ExternalDeviceAutoPlayCandidate = 1 << 4,
+        DidPlayToEnd = 1 << 5,
     };
     typedef unsigned MediaStateFlags;
 
